
			+ Misc bugfixes
			  - 2003-07-17:  Report were created without delimiters/quotes with register globals off  (Matteo)
			  - 2003-07-20:  Added exceptions to bannerid requirement for banner-activate and banner-delete  (Niels)
			  - 2003-07-23:  Added missing style definitions for banner append to the css file  (Niels)


v 2.0rc4.1		+ Misc bugfixes
			  - 2003-07-09:  HTML banner preview wasn't working: it redirected to client-index instead  (Matteo)
			  - 2003-07-09:  Fixed division by zero error in lib-priority that could have been generated on line 886  (Matteo)
			  - 2003-07-09:  Userlog index wasn't working: it caused an endless redirection loop  (Matteo)
			  - 2003-07-10:  Userlog delete didn't work  (Matteo)
			  - 2003-07-11:  Some configuration variables were not correctly set, causing E_ALL notices  (Matteo)
			  - 2003-07-11:  Fixed E_ALL notices in admin-search.php  (Matteo)
			  - 2003-07-11:  Fixed E_ALL notices in local and iframe remote invocation when no banner was return by the delivery engine  (Matteo)
			  - 2003-07-12:  Available languages scan was also searching outside the language dir, giving errors when open_basedir restriction was set   (Matteo)
			  - 2003-07-14:  PHP code inside HTML banners only worked when it was a single line, now multiple lines are supported again  (Niels)


v 2.0rc4		+ Misc changes
			  - 2003-04-13:  Added support for paths in direct selection query string  (Niels)
 			  - 2003-04-13:  Beacon image is now enclosed in a hidden layer to prevent unneeded linewraps after tables and other html tags  (Niels)
			  - 2003-04-16:  Added transparent background and no-border support to simple interstitial layerstyle  (Matteo)
			  - 2003-05-08:  Added ability to use tabs and place quotes around fields in csv report files  (Niels)
			  - 2003-05-20:  Added error message when trying to install phpAdsNew using a PHP version affected by bug #20144, which makes the installer fail  (Matteo)